[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "A TUI (Text User Interface) library focused on ease-of-use."
documentation = "https://docs.rs/cursive"
exclude = ["doc/**", "assets/**", "examples/**"]
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive"
readme = "Readme.md"
repository = "https://github.com/gyscos/Cursive"
version = "0.9.3-alpha.0"
build = "build.rs"

[badges.travis-ci]
repository = "gyscos/Cursive"

[badges.appveyor]
repository = "gyscos/Cursive"

[build-dependencies]
ncurses = {optional = true, version = "5.96"}

[dependencies]
enum-map = "0.4"
enumset = "0.3"
log = "0.4"
owning_ref = "0.4"
toml = "0.4"
unicode-segmentation = "1.0"
unicode-width = "0.1"
xi-unicode = "0.1"
libc = "0.2"
term_size = { version = "0.3", optional = true }
crossbeam-channel = "0.2"

[dependencies.num]
default-features = false
version = "0.2"

[dependencies.maplit]
optional = true
version = "1.0"

[dependencies.bear-lib-terminal]
optional = true
version = "1.3"

[dependencies.ncurses]
features = ["wide"]
optional = true
version = "5.96"

[dependencies.pancurses]
features = ["wide"]
optional = true
version = "0.16"

[dependencies.pulldown-cmark]
default-features = false
optional = true
version = "0.1"

[dependencies.termion]
optional = true
version = "1.5"

[target.'cfg(unix)'.dependencies.signal-hook]
version = "0.1"

[dev-dependencies]
rand = "0.5"
pretty-bytes = "0.2"

[features]
blt-backend = ["bear-lib-terminal"]
default = ["ncurses-backend"]
markdown = ["pulldown-cmark"]
ncurses-backend = ["ncurses", "maplit", "term_size"]
pancurses-backend = ["pancurses", "maplit", "term_size"]
termion-backend = ["termion"]

[lib]
name = "cursive"
