[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "A TUI (Text User Interface) library focused on ease-of-use."
documentation = "https://docs.rs/cursive"
exclude = ["doc/**", "assets/**", "examples/**"]
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive"
readme = "Readme.md"
repository = "https://github.com/gyscos/cursive"
version = "0.14.1-alpha.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["unstable_scroll", "scroll", "markdown"]

[badges.travis-ci]
repository = "gyscos/cursive"

[badges.appveyor]
repository = "gyscos/cursive"

[dependencies]
enum-map = "0.6.0"
enumset = "0.4.0"
log = "0.4.8"
owning_ref = "0.4.0"
unicode-segmentation = "1.3.0"
unicode-width = "0.1.5"
xi-unicode = "0.2.0"
libc = "0.2.60"
term_size = { version = "0.3.1", optional = true }
crossbeam-channel = "0.4.0"
lazy_static = "1"
chrono = "0.4.7"
cfg-if = "0.1.9"
ahash = "0.3"

[dependencies.toml]
optional = true
version = "0.5.1"

[dependencies.num]
default-features = false
version = "0.2.0"

[dependencies.maplit]
optional = true
version = "1.0.1"

[dependencies.bear-lib-terminal]
optional = true
version = "2.0.0"

[dependencies.ncurses]
features = ["wide"]
optional = true
version = "5.99.0"

[dependencies.pancurses]
features = ["wide"]
optional = true
version = "0.16.1"

[dependencies.pulldown-cmark]
default-features = false
optional = true
version = "0.7.0"

[dependencies.termion]
optional = true
version = "1.5.3"

[dependencies.crossterm]
optional = true
version = "0.17"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.1"

[dev-dependencies]
rand = "0.7.0"
pretty-bytes = "0.2.2"
atty = "0.2.13"

[features]
blt-backend = ["bear-lib-terminal"]
default = ["ncurses-backend"]
markdown = ["pulldown-cmark"]
ncurses-backend = ["ncurses", "maplit", "term_size"]
pancurses-backend = ["pancurses", "maplit", "term_size"]
termion-backend = ["termion"]
crossterm-backend = ["crossterm"]
unstable_scroll = []

[lib]
name = "cursive"
