[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "Core components for the Cursive TUI"
documentation = "https://docs.rs/cursive"
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive_core"
readme = "Readme.md"
repository = "https://github.com/gyscos/cursive"
version = "0.3.7"
edition = "2021"
rust-version = "1.61"

[package.metadata.docs.rs]
all-features = true

[badges.travis-ci]
repository = "gyscos/cursive"

[badges.appveyor]
repository = "gyscos/cursive"

[dependencies]
enum-map = "2.0"
enumset = "1.0.4"
log = "0.4"
owning_ref = "0.4"
unicode-segmentation = "1"
unicode-width = "0.1"
xi-unicode = "0.3"
crossbeam-channel = "0.5"
lazy_static = "1"
ahash = "0.8"
serde_json = "1.0.85"
serde_yaml = "0.9.11"

[dependencies.cursive-macros]
path = "../cursive-macros"
version = "0.1.0"

[dependencies.inventory]
version = "0.3.1"
optional = true

[dependencies.ansi-parser]
version = "0.8.0"
optional = true

[dependencies.time]
version = "0.3"
features = ["local-offset", "formatting"]

[dependencies.toml]
optional = true
version = "0.7"

[dependencies.num]
default-features = false
version = "0.4"

[dependencies.pulldown-cmark]
default-features = false
optional = true
version = "0.9"

[features]
default = []
doc-cfg = []
builder = ["inventory", "cursive-macros/builder"]
markdown = ["pulldown-cmark"]
ansi = ["ansi-parser"]
unstable_scroll = []  # Deprecated feature, remove in next version

[lib]
name = "cursive_core"
