[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "Core components for the Cursive TUI"
documentation = "https://docs.rs/cursive"
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive_core"
readme = "README.md"
repository = "https://github.com/gyscos/cursive"
version = "0.4.6"
edition = "2021"
rust-version = "1.61"
include = ["src/**/*", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
enum-map = "2.0"
enumset = "1.1.4"  # EnumSet::empty() became `const` in 1.1.4
log = "0.4"
unicode-segmentation = "1"
unicode-width = "0.2"
xi-unicode = "0.3"
crossbeam-channel = "0.5"
lazy_static = "1"
ahash = "0.8"
serde_json = "1.0.85"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
compact_str = "0.8.0"

[dependencies.cursive-macros]
path = "../cursive-macros"
version = "0.1.0"

[dependencies.inventory]
version = "0.3.1"
optional = true

[dependencies.ansi-parser]
version = "0.9.0"
optional = true

[dependencies.time]
version = "0.3"
features = ["local-offset", "formatting"]

[dependencies.toml]
optional = true
version = "0.8"

[dependencies.num]
default-features = false
version = "0.4"

[dependencies.pulldown-cmark]
default-features = false
optional = true
version = "0.12"

[features]
default = []
doc-cfg = [] # Add doc-centric features
builder = ["dep:inventory", "cursive-macros/builder"] # Enable building views from configs
markdown = ["dep:pulldown-cmark"] # Enables a markdown-to-styled string parser
ansi = ["dep:ansi-parser"] # Enables an ansi-to-styled string parser

[lib]
name = "cursive_core"

[dev-dependencies]
serde_yaml = "0.9.11"
