[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "Proc-macros for the cursive TUI library."
documentation = "https://docs.rs/cursive-macros"
edition = "2021"
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive-macros"
readme = "Readme.md"
repository = "https://github.com/gyscos/cursive"
version = "0.1.0"
include = ["src/**/*"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find-crate = { optional = true, version = "0.6.3" }
proc-macro2 = "1.0.47"
quote = {version = "1.0.21", optional = true }
syn = { version = "2", features = ["full", "extra-traits"], optional = true }


[features]
builder = ["find-crate", "syn", "quote"]
