[package]
name = "cursive-syntect"
readme = "README.md"
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Highlight text with syntect as cursive styled text."
documentation = "https://docs.rs/cursive-syntect"
keywords = ["cursive", "TUI", "syntect"]
repository = "https://github.com/gyscos/cursive"
license = "MIT"
version = "0.2.0"
edition = "2021"
include = ["src/lib.rs", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = { path = "../cursive-core", version= "0.4.0"}
unicode-width = "0.2"

[dependencies.syntect]
version = "5.0.0"
# default-features = false
features = ["parsing"]

[dev-dependencies]
cursive = { path = "../cursive", version = "0.21.0" }

[dev-dependencies.syntect]
version = "5.0.0"
features = ["regex-onig", "metadata"]

[features]
# Using this means that we don't build with "default-features = false", which is unfortunate.
#default = ["regex-onig"]
#regex-onig = ["syntect/regex-onig"]
#regex-fancy = ["syntect/regex-fancy"]
