[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
categories = ["command-line-interface", "gui"]
description = "A TUI (Text User Interface) library focused on ease-of-use."
documentation = "https://docs.rs/cursive"
keywords = ["ncurses", "TUI", "UI"]
license = "MIT"
name = "cursive"
readme = "../Readme.md"
repository = "https://github.com/gyscos/cursive"
version = "0.17.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
cursive_core = { path = "../cursive-core", version= "0.3.0"}
crossbeam-channel = "0.5"
cfg-if = "1"
unicode-segmentation = "1"
unicode-width = "0.1"
lazy_static = "1"
libc = "0.2"
term_size = { version = "0.3", optional = true }
maplit = { version = "1.0", optional = true }
log = "0.4"
ahash = "0.7"

[dependencies.bear-lib-terminal]
optional = true
version = "2"

[dependencies.ncurses]
features = ["wide"]
optional = true
version = "5.99.0"

[dependencies.pancurses]
features = ["wide"]
optional = true
version = "0.17"

[dependencies.termion]
optional = true
version = "1"

[dependencies.crossterm]
optional = true
version = "0.22.1"

[features]
doc-cfg = ["cursive_core/doc-cfg"]  # Enable doc_cfg, a nightly-only doc feature.
blt-backend = ["bear-lib-terminal"]
default = ["ncurses-backend"]
ncurses-backend = ["ncurses", "maplit", "term_size"]
pancurses-backend = ["pancurses", "maplit", "term_size"]
termion-backend = ["termion"]
crossterm-backend = ["crossterm"]
markdown = ["cursive_core/markdown"]
unstable_scroll = []  # Deprecated feature, remove in next version
toml = ["cursive_core/toml"]

[lib]
name = "cursive"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[[example]]
name = "theme"
required-features = ["toml"]

[dev-dependencies]
rand = "0.8"
atty = "0.2"
pretty-bytes = "0.2"
