[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Examples for the cursive TUI library."
documentation = "https://docs.rs/cursive"
edition = "2018"
license = "MIT"
name = "cursive-examples"
publish = false
readme = "Readme.md"
repository = "https://github.com/gyscos/cursive"
version = "0.1.1-alpha.0"

[dependencies]
atty = "0.2.14"
log = "0.4.8"
pretty-bytes = "0.2.2"
rand = "0.7.3"
cursive = { path = "../cursive", default-features=false }
crossbeam-channel = "0.4.2"
lazy_static = "1.4"

[features]
default = ["cursive/default"]

[[bin]]
name = "theme"
required-features = ["cursive/toml"]
